--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,24 @@
+
 <h1>Devouring Burgers</h1>
 
 <h2>Burgers that you haven't eaten yet.</h2>
 
 <ul>
-    {{#each burgers}} {{#unless devoured}} {{> burgers/burger-block devoured=true}} {{/unless}} {{/each}}
+  {{#each burgers}} 
+    {{#unless devoured}} 
+      {{> burgers/burger-block devoured=true}} 
+    {{/unless}} 
+  {{/each}}
 </ul>
 
 <h2>Burgers you have eaten.</h2>
 
 <ul>
-    {{#each burgers}} {{#if devoured}} {{> burgers/burger-block devoured=false}} {{/if}} {{/each}}
+    {{#each burgers}}
+     {{#if devoured}}
+      {{> burgers/burger-block devoured=false}}
+     {{/if}}
+    {{/each}}
 </ul>
 
 <h2>Add a burger.</h2>
@@ -17,7 +26,8 @@
 
     <div class="form-group">
         <label for="ca">Burger Name:</label>
-        <input type="text" id="ca" name="name">
+        <input type="text" id="ca" name="burger_name">
+    //change made above from name to burger_name
     </div>
 
     <div class="form-group">
