--- a/views/layouts/partials/burgers/burger-block.handlebars
+++ b/views/layouts/partials/burgers/burger-block.handlebars
@@ -1,7 +1,9 @@
-<li>
-    {{burger_name}}
 
+<li>
+    {{!-- not sure if below should be name or burger_name think it refers to other handlebars file --}}
+    {{burger_name}}
+//changed to burger_name to test
     <button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
-        {{#if devoured}}That was good!{{else}}Eat up!{{/if}}
+        {{#if devoured}}That was good!{{else}}Eat your burger!{{/if}}
     </button>
 </li>
