--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,24 +1,44 @@
-
-<h1>Devouring Burgers</h1>
+<p>Successfully connected to server!</p><h1>
+    Devouring Burgers</h1>
 
 <h2>Burgers that you haven't eaten yet.</h2>
 
-<ul>
-  {{#each burgers}} 
+ <ul>
+    {{#each burgers}} 
     {{#unless devoured}} 
-      {{> burgers/burger-block devoured=true}} 
+
+<li>
+    {{burger_name}}
+    <button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
+        {{#if devoured}}That was good!
+        {{else}}Eat your burger!{{/if}}
+    </button>
+</li>
+
+
+    {{!-- {{> burgers/burger-block devoured=true}}  --}}
     {{/unless}} 
-  {{/each}}
+    {{/each}}
 </ul>
 
 <h2>Burgers you have eaten.</h2>
 
 <ul>
     {{#each burgers}}
-     {{#if devoured}}
-      {{> burgers/burger-block devoured=false}}
-     {{/if}}
-    {{/each}}
+     {{#if devoured}} 
+<li>
+    {{burger_name}}
+
+    <button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
+        {{#if devoured}}That was good!{{else}}Eat your burger!{{/if}}
+    </button>
+</li>
+
+
+
+     {{!-- {{> burgers/burger-block devoured=false}}  --}}
+     {{/if}} 
+     {{/each}}
 </ul>
 
 <h2>Add a burger.</h2>
@@ -26,8 +46,7 @@
 
     <div class="form-group">
         <label for="ca">Burger Name:</label>
-        <input type="text" id="ca" name="burger_name">
-    //change made above from name to burger_name
+        <input type="text" id="ca" name="burger_name"> //change made above from name to burger_name
     </div>
 
     <div class="form-group">
