--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,13 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Monoton|Scope+One" rel="stylesheet">
+    
+    <link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
     <title>Devouring Burgers</title>
+    {{!-- <img src="/assets/img/burger.jpg"> --}}
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/assets/js/burgers.js"></script>
 </head>
 
-<body>
+<body style="background-image: url('/assets/img/burger2.jpg');">
     {{{ body }}}
 </body>
 
