--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,5 @@
-<p>Successfully connected to server!</p><h1>
+<br><br>
+<h1>
     Devouring Burgers</h1>
 
 <h2>Burgers that you haven't eaten yet.</h2>
@@ -34,9 +35,6 @@
     </button>
 </li>
 
-
-
-     {{!-- {{> burgers/burger-block devoured=false}}  --}}
      {{/if}} 
      {{/each}}
 </ul>
@@ -46,7 +44,8 @@
 
     <div class="form-group">
         <label for="ca">Burger Name:</label>
-        <input type="text" id="ca" name="burger_name"> //change made above from name to burger_name
+        <input type="text" id="ca" name="burger_name"> 
+        
     </div>
 
     <div class="form-group">
