--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,42 +1,45 @@
-<br><br>
+<br>
+<br>
 <h1>
     Devouring Burgers</h1>
 
 <h2>Burgers that you haven't eaten yet.</h2>
 
- <ul>
+<ul style="list-style-type:none">
     {{#each burgers}} 
-    {{#unless devoured}} 
+        {{#unless devoured}}
+          <li>
+              {{this.burger_name}}
+            
+            <form action="/{{this.id}}?_method=PUT" method="POST">
+                <input type="hidden" name="devoured" value="true">
+                <button class="btn-primary" type="submit">Eat Your Burger.</button>
+            </form>
 
-<li>
-    {{burger_name}}
-    <button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
-        {{#if devoured}}That was good!
-        {{else}}Eat your burger!{{/if}}
-    </button>
-</li>
+
+            {{!-- {{burger_name}}
+            <button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
+            {{#if devoured}}That was good! {{else}}Eat your burger!{{/if}}
+        </button> --}}
+    </li>
 
 
-    {{!-- {{> burgers/burger-block devoured=true}}  --}}
-    {{/unless}} 
-    {{/each}}
+    {{!-- {{> burgers/burger-block devoured=true}} --}} {{/unless}} {{/each}}
 </ul>
 
 <h2>Burgers you have eaten.</h2>
 
-<ul>
-    {{#each burgers}}
-     {{#if devoured}} 
-<li>
-    {{burger_name}}
+<ul style="list-style-type:none">
+    {{#each burgers}} {{#if devoured}}
+    <li>
+        {{burger_name}}
 
-    <button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
-        {{#if devoured}}That was good!{{else}}Eat your burger!{{/if}}
-    </button>
-</li>
+        <button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
+            {{#if devoured}}That was good!{{else}}Eat your burger!{{/if}}
+        </button>
+    </li>
 
-     {{/if}} 
-     {{/each}}
+    {{/if}} {{/each}}
 </ul>
 
 <h2>Add a burger.</h2>
@@ -44,8 +47,8 @@
 
     <div class="form-group">
         <label for="ca">Burger Name:</label>
-        <input type="text" id="ca" name="burger_name"> 
-        
+        <input type="text" id="ca" name="burger_name">
+
     </div>
 
     <div class="form-group">
