--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,19 +1,43 @@
 <br>
 <br>
 <h1>
+  
     Devouring Burgers</h1>
+<div class=container>
+  <div class=row>
+    <div class="col-sm-3"></div>
+    <div class="col-sm-3"></div>
+    <div class="col-sm-3">
+      <br><br>
+<h2>Burgers you have eaten.</h2>
 
-<h2>Burgers that you haven't eaten yet.</h2>
+<ul style="list-style-type:none">
+  {{#each burgers}} {{#if devoured}}
+  <li>
+    {{id}} {{burger_name}}
+
+
+  </li>
+
+  {{/if}} {{/each}}
+</ul>
+</div>
+<div class="col-sm-3">
+  <br><br>
+<h2>Burgers you haven't eaten.</h2>
+
+
 
 <ul style="list-style-type:none">
     {{#each burgers}} 
         {{#unless devoured}}
           <li>
+            {{this.id}}
               {{this.burger_name}}
             
             <form action="/{{this.id}}?_method=PUT" method="POST">
                 <input type="hidden" name="devoured" value="true">
-                <button class="btn-primary" type="submit">Eat Your Burger.</button>
+                <button class="btn btn-sm btn-eat" style= "background-color: #444369; color:white; font-family='Monoton';"type="submit">Eat.</button>
             </form>
 
 
@@ -26,38 +50,37 @@
 
     {{!-- {{> burgers/burger-block devoured=true}} --}} {{/unless}} {{/each}}
 </ul>
+</div>
 
-<h2>Burgers you have eaten.</h2>
 
-<ul style="list-style-type:none">
-    {{#each burgers}} {{#if devoured}}
-    <li>
-        {{burger_name}}
+    </div>
+    
+    
 
-        <button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
-            {{#if devoured}}That was good!{{else}}Eat your burger!{{/if}}
-        </button>
-    </li>
-
-    {{/if}} {{/each}}
-</ul>
-
+<div class=row>
+  <div class="col-sm-3"></div>
+  <div class="col-sm-3"></div>
+  <div class="col-sm-3"></div>
+  <div class="col-sm-3">
+  
 <h2>Add a burger.</h2>
 <form class="create-form">
 
     <div class="form-group">
-        <label for="ca">Burger Name:</label>
+        
         <input type="text" id="ca" name="burger_name">
-
+        <button class="btn btn-sm btn-burger" type="submit" style="background-color: pink;">Submit</button>
     </div>
-
+<div class="col-sm-12">
     <div class="form-group">
-        <label for="slee">Devoured?</label>
-        <br>
+        
+        
         <input type="radio" name="devoured" value="1" checked> Devoured!
         <br>
         <input type="radio" name="devoured" value="0"> To be later savoured...
     </div>
 
-    <button type="submit">Add burger</button>
+    
 </form>
+</div>
+</div>
