--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Monoton|Scope+One" rel="stylesheet">
     
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Monoton|Scope+One" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
     <title>Devouring Burgers</title>
     {{!-- <img src="/assets/img/burger.jpg"> --}}
