--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,7 +30,7 @@
           <li>
             {{this.id}}
               {{this.burger_name}}
-              <form action="/{{this.id}}?_method=POST" method="POST">
+              <form action="/{{this.id}}?_method=PUT" method="POST">
                 <input type="hidden" name="devoured" value="true">
                 <button class="btn btn-sm btn-eat" style= "background-color: #444369; color:white; font-family='Monoton';"type="submit">Eat.</button>
               </form>
@@ -84,3 +84,57 @@
 </form>
 </div>
 </div>
+<!--Footer-->
+<footer class="page-footer blue center-on-small-only">
+
+  <!--Footer Links-->
+  <div class="container-fluid >
+    <div class="row">
+
+      <!--First column-->
+      <div class="col-md-6">
+        <h5 class="title"></h5>
+        <p></p>
+      </div>
+      <!--/.First column-->
+
+      <!--Second column-->
+      <div class="col-md-6">
+        <h5 class="title"></h5>
+        <ul style="list-style: none;>
+          <li>
+            <a href="#!"> </a>
+          </li>
+          <li>
+            <a href="#!"></a>
+          </li>
+          <li>
+            <a href="#!"></a>
+          </li>
+          <li>
+            <a href="#!"></a>
+          </li>
+        </ul>
+      </div>
+      <!--/.Second column-->
+    </div>
+  </div>
+  <!--/.Footer Links-->
+
+ 
+  
+  
+  <!--Copyright-->
+  <div class="footer-copyright">
+    
+    <div class="container-fluid"style ="font-size: 22px; text-align:left;">
+      © 2018 Andreya Valabek
+      <a href="https://github.com/avalabek/Burgers">
+        <i class="fab fa-github-square"></i>
+  
+    </div>
+  </div>
+  
+  <br>
+  <br>
+  </div>
