--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,9 +12,10 @@
     {{!-- <img src="/assets/img/burger.jpg"> --}}
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/assets/js/burgers.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 
-<body style="background-image: url('/assets/img/burger2.jpg');">
+<body style="background-image: url('/assets/img/burger6.jpg'); background-size: contain; background-repeat:no-repeat;">
     {{{ body }}}
 </body>
 
