--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,7 +13,7 @@
         {{#each burgers}} 
           {{#if devoured}}
         <li>
-          {{id}} 
+          {{!-- {{id}}  --}}
             {{burger_name}}
         </li>
           {{/if}} 
@@ -28,20 +28,14 @@
         {{#each burgers}} 
           {{#unless devoured}}
           <li>
-            {{this.id}}
-              {{this.burger_name}}
-
-              {{!-- <form action="/{{this.id}}?_method=PUT" method="POST">
-                <input type="hidden" name="devoured" value="true">
-                <button class="btn btn-sm btn-eat" style= "background-color: #444369; color:white; font-family='Monoton';"type="submit">Eat.</button>
-              </form> --}}
+            {{!-- {{this.id}} --}}
 
               {{!-- these lines 38 to 41 when commented in and out; without them, 404 error, with them connection err
               it finds an error in burger.js cb is not a function, also it console logs the condition and id which it 
               is not doing without these lines. As far as I can tell, tehse lines only should change the text of button; as I
               dont' want to do that, should be fine to console log them out. but seems they are key to error --}}
              {{burger_name}} 
-            <button class="change-devoured btn-burger" data-id="{{id}}" data-newdevoured="{{devoured}}">
+            <button type="button" class="btn-sm change-devoured btn-fushia" data-id="{{id}}" data-newdevoured="{{devoured}}">
             {{#if devoured}}That was good! {{else}}Eat.{{/if}}
         </button> 
     </li>
@@ -74,13 +68,22 @@
         <button class="btn btn-sm btn-burger" type="submit">Submit</button>
     </div>
 <div class="col-sm-12">
-    <div class="form-group">
+<div class="form-check">
+  <label class="form-check-label">
+    <input type="radio" class="form-check-input" name="devoured" value="1" checked>Devoured!
+    </label>
+    <input type="radio" class="form-check-input" name="devoured" value="0">To savour later...
+  </label>
+</div>
+
+
+    {{!-- <div class="form-group">
         
         
         <input type="radio" name="devoured" value="1" checked> Devoured!
         <br>
         <input type="radio" name="devoured" value="0"> To be later savoured...
-    </div>
+    </div> --}}
 
     
 </form>
@@ -125,15 +128,15 @@
 
  
   
-  
+  <br><br>
   <!--Copyright-->
   <div class="footer-copyright">
     
-    <div class="container-fluid"style ="font-size: 22px; text-align:left;">
-      © 2018 Andreya Valabek
-      <a href="https://github.com/avalabek/Burgers">
-        <i class="fab fa-github-square"></i>
-  
+    <div class="container-fluid mainFont">
+      
+      <a href="https://github.com/avalabek/Burgers" target="_blank">
+        <i class="fab fa-github"></i></a><a href="https://www.linkedin.com/in/andreya-valabek/" target="_blank"> <i class="fab fa-linkedin-in"></i></a>
+   © 2018 Andreya Valabek
     </div>
   </div>
   
