--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,8 @@
     <div class="col-sm-3"></div>
     <div class="col-sm-3"></div>
     <div class="col-sm-3">
-    <br><br>
+    <br>
+    <br>      <br><br>
     <h2>Burgers you have eaten.</h2>
 
       <ul style="list-style-type:none">
@@ -22,7 +23,8 @@
     </div>
 
     <div class="col-sm-3">
-    <br><br>
+    <br><br><br><br>
+    
     <h2>Burgers you haven't eaten.</h2>
       <ul style="list-style-type:none">
         {{#each burgers}} 
@@ -30,19 +32,13 @@
           <li>
             {{!-- {{this.id}} --}}
 
-              {{!-- these lines 38 to 41 when commented in and out; without them, 404 error, with them connection err
-              it finds an error in burger.js cb is not a function, also it console logs the condition and id which it 
-              is not doing without these lines. As far as I can tell, tehse lines only should change the text of button; as I
-              dont' want to do that, should be fine to console log them out. but seems they are key to error --}}
-             {{burger_name}} 
+                        {{burger_name}} 
             <button type="button" class="btn-sm change-devoured btn-fushia" data-id="{{id}}" data-newdevoured="{{devoured}}">
             {{#if devoured}}That was good! {{else}}Eat.{{/if}}
         </button> 
     </li>
 
-{{!-- this line below was for when partial was in but I could not get it to work
-    {{> burgers/burger-block devoured=true}}  --}}
-    
+  
     {{/unless}} 
     {{/each}}
 </ul>
@@ -60,6 +56,7 @@
   <div class="col-sm-3">
   
 <h2>Add a burger.</h2>
+
 <form class="create-form">
 
     <div class="form-group">
@@ -72,6 +69,7 @@
   <label class="form-check-label">
     <input type="radio" class="form-check-input" name="devoured" value="1" checked>Devoured!
     </label>
+    <label class="form-check-label">
     <input type="radio" class="form-check-input" name="devoured" value="0">To savour later...
   </label>
 </div>
@@ -93,47 +91,16 @@
 <footer class="page-footer blue center-on-small-only">
 
   <!--Footer Links-->
-  <div class="container-fluid >
-    <div class="row">
-
-      <!--First column-->
-      <div class="col-md-6">
-        <h5 class="title"></h5>
-        <p></p>
-      </div>
-      <!--/.First column-->
-
-      <!--Second column-->
-      <div class="col-md-6">
-        <h5 class="title"></h5>
-        <ul style="list-style: none;>
-          <li>
-            <a href="#!"> </a>
-          </li>
-          <li>
-            <a href="#!"></a>
-          </li>
-          <li>
-            <a href="#!"></a>
-          </li>
-          <li>
-            <a href="#!"></a>
-          </li>
-        </ul>
-      </div>
-      <!--/.Second column-->
-    </div>
-  </div>
-  <!--/.Footer Links-->
-
- 
-  
+  <div class="container-fluid">
+    
   <br><br>
   <!--Copyright-->
   <div class="footer-copyright">
     
     <div class="container-fluid mainFont">
-      
+      <br><br><br><br>
+      <br>
+      <br>
       <a href="https://github.com/avalabek/Burgers" target="_blank">
         <i class="fab fa-github"></i></a><a href="https://www.linkedin.com/in/andreya-valabek/" target="_blank"> <i class="fab fa-linkedin-in"></i></a>
    © 2018 Andreya Valabek
@@ -143,3 +110,6 @@
   <br>
   <br>
   </div>
+  </footer>
+  
+  
